Prerender: test no recursive NoStatePrefetch.

Obsolete and flaky tests for the disabled classical prerender are
removed.

This test also adds an ignored ExpectedContents to prevent a race
condition in the test when a PrerenderContents final status may be
checked before or after the test tears itself down.

Bug: 903695
Change-Id: Ia77b3beb79bf579ca1904c54e469f0de4b648f94
Reviewed-on: https://chromium-review.googlesource.com/c/1333779
Commit-Queue: Matthew Cary <mattcary@chromium.org>
Reviewed-by: Egor Pasko <pasko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607944}
Former-commit-id: 276256f3b00276cb91fe25a518e1b62021c79d04